0.4:
 - Updated database of factional items
 - Added saving of pet's spells
 - Added conversion of factional items
 - Added console commands

0.3:
 - Initial changelog