@@ -1,4 +1,5 @@
 0.4:
+ - Added profile options
  - Updated database of factional items
  - Added saving of pet's spells
  - Added conversion of factional items
